Update user params and change password
